Addressing comments/ Fixing the icon and closing x to px, and aligning it better to the text

--- a/src/components/message/message.scss
+++ b/src/components/message/message.scss
@@ -88,7 +88,7 @@ $message-width: 300px !default;
     margin-bottom: 0px;
 
     .ui-message__content{
-      padding: 2px 40px;
+      padding: 2px 35px;
     }
 
     .ui-message__type {
@@ -101,11 +101,15 @@ $message-width: 300px !default;
       }
 
       .ui-message__type-icon {
-        top: 20%;
+        top: 8px;
         &:before {
           color: $color;
         }
       }
+    }
+
+    .ui-message__close{
+      top: 8px;
     }
   }
 }
